/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package px.carnot.planner.file_source.ir;

option go_package = "ir";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

// A logical file source deployment
message FileSourceDeployment {
  // For now this is the same as glob_pattern, but in the future may provide a logical name for the
  // file source.
  string name = 1;
  // The glob pattern to use to find files to read.
  string glob_pattern = 2;
  // The table name to write the data to.
  string table_name = 3;
  // The ttl to run the file source for. -1 indicates that the file source should run indefinitely.
  google.protobuf.Duration ttl = 4 [ (gogoproto.customname) = "TTL" ];
}
